pages/user/UserProfile.module.css
.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100dvw;
  background: linear-gradient(132deg, var(--user-color-primary), var(--user-color-secondary));
  color: white;
  flex-grow: 1;

  .wallpaper {
    height: 100%;
    position: relative;
    width: 100%;
    height: 150px;

    img {
      width: 100%;
      height: 150px;
      min-height: 150px;
      min-width: 100%;
      object-fit: cover;
      background-color: var(--color-mid);
    }

    input[type="file"] {
      display: none;
    }

    .editPencil {
      backdrop-filter: var(--frosted-glass-blur);
      border: var(--outline);
      border-radius: 8px;
      box-shadow: var(--shadow);
    }
  }

  .page {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    width: 100dvw;
    position: relative;
    border-top: 1px solid var(--user-color-border, var(--color-outline));

    @media (max-width: 768px) {
      align-items: center;
      flex-direction: column;
    }

    .profile{
      display: flex;
      flex-direction: column;
      flex-wrap: nowrap;
      align-items: flex-start;
      margin: 0 20px;
      gap: 15px;

      @media (max-width: 768px) {
        align-items: center;
        margin: unset;
      }

      .avatar {
        width: 180px;
        height: 180px;
        border: 5px solid var(--user-color-primary, var(--color-darkest));
        border-radius: 50%;
        margin-top: -90px;
        background-color: var(--user-color-primary, var(--color-darkest));
        z-index: 1;

        img {
          width: 100%;
          height: 100%;
          border-radius: 50%;
          object-fit: cover;
        }
      }

      .name {
        gap: 8px;
        display: flex;
        flex-direction: column;

        .displayName {
          font-size: 1.2rem;
          font-family: 'Dogica Pixel', Arial, Helvetica, sans-serif;
          display: flex;
          align-items: center;
          color: var(--user-color-text);
        }

        .userName {
          font-size: 1rem;
          color: var(--user-color-text);
          opacity: 75%;
          display: flex;
          align-items: center;
        }
      }

      .badges {
        display: flex;
        gap: 4px;
      }
    }

    .moreInfo{
      display: flex;
      flex-wrap: wrap;
      flex-direction: row;
      align-items: stretch;
      justify-content: flex-start;
      gap: 15px;
      width: 100dvw;
      padding-top: 10px;
      padding-right: 10px;

      @media (max-width: 768px) {
        flex-direction: column;
        margin-top: 10px;
        padding: 20px;
      }

      .infoBox {
          max-width: calc(calc(100% / var(--num, 2)) - 10px);

          @media (max-width: 768px) {
            max-width: unset;
            min-height: 50px;
          }
      }

      #description {
        span, textarea {
          color: var(--user-color-text);
          background: none;
          border: none;
          flex-grow: 1;
        }
      }

      #pixelsInfo {
        justify-content: space-between;
        align-items: center;
      }

    }

    .editUserColors {
      position: absolute;
      right: 3px;
      top: -40px;
      height: 2rem;
      border-radius: 12px;
      box-shadow: var(--shadow);
      border: var(--outline);
      overflow: hidden;

      input[type="color"] {
          border: none;
          padding: 0;
          width: 2rem;
          height: 2rem;
          cursor: pointer;
      }
      input[type="color"]::after {
          content: "";
          width: 100px;
          height: 100px;
          display: flex;
      }
      #editPrimaryColor::after {
        background: var(--user-color-primary);
      }
      #editSecondaryColor::after {
        background: var(--user-color-secondary);
      }

      .paintIcon {
        position: absolute;
        justify-self: anchor-center;
        align-self: anchor-center;
        mix-blend-mode: difference;
      }
    }
  }

  .saveChanges {
    position: absolute;
    bottom: 10px;
    right: 10px;
    z-index: 100;
  }

}

.infoBox {
  display: flex !important;
  align-items: center !important;
  gap: 1rem !important;
  border-radius: 22px !important;
  color: var(--user-color-text) !important;
  transition: var(--smooth-transition) !important;
  padding: 10px !important;
  border: 1px solid var(--user-color-border, var(--color-outline)) !important;
  background: var(--user-color-background-item, var(--color-mid)) !important;
  margin: 0 !important;
  box-shadow: var(--shadow) !important;
  position: relative !important;
  flex-grow: 1 !important;
}

.editPencil {
  padding: 5px;
  transition: var(--smooth-transition);
  position: absolute;
  top: 5px;
  right: 5px;
  cursor: pointer;
}
.editPencil:hover {
  scale: var(--hover-scale);
}

